--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="img/bls_icon.png" class="img-thumbnail" alt="Bicycle Lane Separator"></a>
+      <a class="navbar-brand" href="#"><img src="img/emergency.png" class="img-thumbnail w-25" alt="Bicycle Lane Separator"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="cacc.html">Command Center
-              <span class="sr-only">(current)</span>
+            <a class="nav-link" href="cacc.html" target="_blank">Command Center
+              <span class="sr-only">(current)</span> 
             </a>
           </li>
         </ul>
