--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 <div class="container">
 
     <!-- Call to Action Well -->
-    <div class="bg-dark my-5 py-4 text-center">
+    <div class="bg-title my-5 py-4 text-center">
         <h1 class="text-uppercase text-white">Casc-Aid Command Center</h1>
     </div>
 
-      <div class="row align-items-center text-justify m-auto">
-        <h3 class="font-weight-light text-uppercase">Hyperlocal, rapid response services using an integrated platform for resilience</h3>
+      <div class="row align-items-center text-center m-auto">
+        <h3 class="font-weight-light">Hyperlocal, rapid response services using an integrated platform for resilience</h3>
       </div>
 
     <!-- /.row -->
@@ -99,6 +99,40 @@
 		  </section>
       <!-- /.row -->
 
+    <div class="my-5 text-center">
+        <h1 class="text-uppercase">Partners</h1>
+    </div>
+  <div class="row">
+      <!--Grid column-->
+      
+      <div class="col-md-4 mb-5 text-center">
+        <figure class="figure">
+          <img src="img/RR_Logo_Circle-03.png"
+            class="figure-img img-fluid z-depth-1 contain" alt="...">
+          <figcaption class="figure-caption text-justify mt-2"><a href="reliefriders.urbanmorph.com" target="_blank">Relief Riders</a> use the platform to deliver essentials to the elderly and vulnerable during the COVID pandemic across 9 cities with 700 volunteers</figcaption>
+        </figure>
+      </div>
+      <!--Grid column-->
+
+      <div class="col-md-4 mb-5 text-center">
+        <figure class="figure">
+          <img src="img/bioman.png"
+            class="figure-img img-fluid z-depth-1 contain-long" alt="...">
+          <figcaption class="figure-caption text-justify mt-2"><a href="bioman.tech" target="_blank">Bioman</a> uses this platform to assign own or thrid party waste management pick up services based on demand. </figcaption>
+        </figure>
+      </div>
+      <!--Grid column-->
+
+      <div class="col-md-4 mb-5 text-center">
+        <figure class="figure">
+          <img src="img/catalyst2030.jpeg"
+            class="figure-img img-fluid z-depth-1 contain-long" alt="...">
+          <figcaption class="figure-caption text-justify mt-2">Select partners of <a href="http://www.catalyst2030nase.org" target="_blank">Catalyst 2030 NASE</a> are piloting this platform to deliver COVID relief services to remote villages across the country</figcaption>
+        </figure>
+      </div>
+      <!--Grid column-->
+    </div>
+    <!--row-->
 
   </div>
   <!-- /.container -->
