--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		            </div>
 		            <h3>Hyperlocal</h3>
 		            <p class="d-inline text-justify lead mb-0">
-		              The command center allows you to identify and pinpoint help nearby. It cuts down response time and builds networks of people who help. The platform is build on the principle of "closest people first".
+		              The command center allows you to identify and pinpoint help nearby. It cuts down response time and builds networks of people who help. The platform is built on the principle of "closest people first".
 		            </p> 
 		          </div>
 		        </div>
@@ -80,7 +80,7 @@
 		            </div>
 		            <h3>Rapid Response</h3>
 		            <p class="d-inline text-justify lead mb-0">
-		              Building networks between service agents and hubs cut down response time in case of emergencies. The platform let you track the reponse time and improve on it.
+		              Building networks between requesters and responders cuts down response time in case of emergencies. The platform looks to optimise response time especially in emergencies.
 		            </p> 
 		          </div>
 		        </div>
@@ -91,7 +91,7 @@
                 </div>
                 <h3>Services</h3>
                   <p class="text-justify lead mb-0">
-                  The platform allows a range of services to be published. From emergency items to consultation services. It helps identify third party providers who can respond faster.
+                  The platform allows a range of services to be published. From emergency items to consultation services. It helps identify third party providers who can respond faster. 
                   </p>           
               </div>
             </div>
