--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="img/emergency.png" class="img-thumbnail w-25" alt="Bicycle Lane Separator"></a>
+      <a class="navbar-brand" href="#"><img src="img/emergency.png" class="img-thumbnail w-25" alt="Casc-Aid"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="cacc.html" target="_blank">Command Center
+            <a class="nav-link" href="cacc.html" target="_blank">Map
               <span class="sr-only">(current)</span> 
             </a>
           </li>
@@ -49,12 +49,13 @@
 <div class="container">
 
     <!-- Call to Action Well -->
-    <div class="bg-title my-5 py-4 text-center">
+    <div class="bg-primary my-5 py-4 text-center">
         <h1 class="text-uppercase text-white">Casc-Aid Command Center</h1>
     </div>
 
       <div class="row align-items-center text-center m-auto">
-        <h3 class="font-weight-light">Hyperlocal, rapid response services using an integrated platform for resilience</h3>
+        <h3 class="font-weight-light">Hyperlocal, rapid response services using an integrated platform for resilience.</h3>&nbsp;&nbsp;
+        <a href="cacc.html" class="btn btn-primary active" role="button" target="_blank">View Map</a>
       </div>
 
     <!-- /.row -->
