--- a/index.html
+++ b/index.html
@@ -49,13 +49,15 @@
 <div class="container">
 
     <!-- Call to Action Well -->
-    <div class="bg-primary my-5 py-4 text-center">
-        <h1 class="text-uppercase text-white">Casc-Aid Command Center</h1>
+    <div class="bg-light my-5 py-4 text-center">
+        <h1 class="text-uppercase" style="color: #0275d8;">Casc-Aid Command Center</h1>
     </div>
 
-      <div class="row align-items-center text-center m-auto">
-        <h3 class="font-weight-light">Hyperlocal, rapid response services using an integrated platform for resilience.</h3>&nbsp;&nbsp;
-        <a href="cacc.html" class="btn btn-primary active" role="button" target="_blank">View Map</a>
+      <div class="row align-items-center text-justify m-auto">
+        <h3 class="lead">Hyperlocal, rapid response services using an integrated platform for resilience. Built by the team behind the Relief Riders, a network of 700 volunteers across 9 cities. Its a solution that has delivered essentials to more than 1000 people in just 20 days with an average turnaround time thats quicker than a commercial delivery partner. If you are in the business of emergency response or sustainability we can help you setup the command center and get you going.</h3><br>
+        <div class="my-3 mx-auto">
+          <a href="cacc.html" class="btn btn-primary btn-lg active" role="button" target="_blank">View Map</a>
+        </div>
       </div>
 
     <!-- /.row -->
