--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
     </div>
 
       <div class="row align-items-center text-justify m-auto">
-        <h3 class="lead">Hyperlocal, rapid response services using an integrated platform for resilience. Built by the team behind the Relief Riders, a network of 700 volunteers across 9 cities. Its a solution that has delivered essentials to more than 1000 people in just 20 days with an average turnaround time thats quicker than a commercial delivery partner. If you are in the business of emergency response or sustainability we can help you setup the command center and get you going.</h3><br>
-        <div class="my-3 mx-auto">
-          <a href="cacc.html" class="btn btn-primary btn-lg active" role="button" target="_blank">View Map</a>
-        </div>
+        <p class="lead">Casc-Aid is a technology platform which enables hyperlocal, rapid response services to citizens. Built by the team behind the Relief Riders, a network of 700 volunteers across 9 cities delivering essentials to people during the pandemic. Its a solution that has delivered essentials to more than 1000 people in just 20 days with an average turnaround time thats quicker than a commercial delivery partner. The platform enables request logging, tracking, back office ops and collaboration with other orgs using the <a href="cacc.html" target="_blank">map dashboard</a>. <br><br>
+
+        If you are an organisation delivering emergency response or accelerating SDG goals by engaging with people join the partners we already have on board to collaborate. We can help you setup the command center and get you going in 30 mins</p>
       </div>
 
     <!-- /.row -->
