--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="row align-items-center text-justify m-auto">
         <p class="lead">Casc-Aid is a technology platform which enables hyperlocal, rapid response services to citizens. Built by the team behind the Relief Riders, a network of 700 volunteers across 9 cities delivering essentials to people during the pandemic. Its a solution that has delivered essentials to more than 1000 people in just 20 days with an average turnaround time thats quicker than a commercial delivery partner. The platform enables request logging, tracking, back office ops and collaboration with other orgs using the <a href="cacc.html" target="_blank">map dashboard</a>. <br><br>
 
-        If you are an organisation delivering emergency response or accelerating SDG goals by engaging with people join the partners we already have on board to collaborate. We can help you setup the command center and get you going in 30 mins</p>
+        If you are an organisation delivering emergency response or accelerating SDG goals, join the partners we already have on board to collaborate and increase your reach. We can help you setup the command center and get you going in 30 mins.</p>
       </div>
 
     <!-- /.row -->
