command center link

--- a/index.html
+++ b/index.html
@@ -29,14 +29,16 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#"><img src="img/emergency.png" class="img-thumbnail w-25" alt="Casc-Aid"></a>
+      <a class="navbar-brand" href="#">
+        <img src="img/emergency.png" class="img-thumbnail" alt="Casc-Aid" style="width: 50px">&nbsp;&nbsp;Casc-Aid
+      </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="cacc.html" target="_blank">Map
+            <a class="nav-link" href="http://34.70.122.120" target="_blank">Command Center
               <span class="sr-only">(current)</span> 
             </a>
           </li>
@@ -45,16 +47,28 @@
     </div>
   </nav>
 
+  <!-- Masthead -->
+  <header class="masthead text-white text-center">
+    <div class="overlay"></div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xl-9 mx-auto">
+          <h1 class="mb-3">CASC-AID</h1>
+           <h3 class="mb-5">Hyperlocal, Rapid Response, Services</h3>
+        </div>
+           <p class="bottomright">
+            Photo by <a href="https://unsplash.com/@noshadtakes?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Nowshad Arefin</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+           </p>
+      </div>
+    </div>
+  </header>
+
   <!-- Page Content -->
 <div class="container">
 
-    <!-- Call to Action Well -->
-    <div class="bg-light my-5 py-4 text-center">
-        <h1 class="text-uppercase" style="color: #0275d8;">Casc-Aid Command Center</h1>
-    </div>
 
       <div class="row align-items-center text-justify m-auto">
-        <p class="lead">Casc-Aid is a technology platform which enables hyperlocal, rapid response services to citizens. Built by the team behind the Relief Riders, a network of 700 volunteers across 9 cities delivering essentials to people during the pandemic. Its a solution that has delivered essentials to more than 1000 people in just 20 days with an average turnaround time thats quicker than a commercial delivery partner. The platform enables request logging, tracking, back office ops and collaboration with other orgs using the <a href="cacc.html" target="_blank">map dashboard</a>. <br><br>
+        <p class="lead mt-3">Casc-Aid is an operating model supported by a technology platform that enables hyperlocal, rapid response services to citizens. Built by the team behind the Relief Riders, a network of 700 volunteers across 9 cities delivering essentials to people during the pandemic. Its a solution that has delivered essentials to more than 1000 people in just 20 days with an average turnaround time thats quicker than a commercial delivery partner. The platform enables request logging, tracking responses, back office operations and collaboration with other orgs using the <a href="cacc.html" target="_blank">map dashboard</a>. <br><br>
 
         If you are an organisation delivering emergency response or accelerating SDG goals, join the partners we already have on board to collaborate and increase your reach. We can help you setup the command center and get you going in 30 mins.</p>
       </div>
@@ -153,6 +167,10 @@
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
               <a href="mailto:contact@urbanmorph.com?subject=[Casc-Aid]">Contact</a>
+            </li>
+            <li class="list-inline-item">&sdot;</li>
+            <li class="list-inline-item">
+              <a href="http://34.70.122.120" target="_blank">Command Center</a>
             </li>
           </ul>
           <p class="text-muted small mb-4 mb-lg-0">&copy; Urban Morph 2021. All Rights Reserved.</p>
