--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		            </div>
 		            <h3>Rapid Response</h3>
 		            <p class="d-inline text-justify lead mb-0">
-		              Building networks between requesters and responders cuts down response time in case of emergencies. The platform looks to optimise response time especially in emergencies.
+		              The operating model builds networks between requesters and responders to cut down response time. "Time to respond" is very valuable in emergencies.
 		            </p> 
 		          </div>
 		        </div>
@@ -107,7 +107,7 @@
                 </div>
                 <h3>Services</h3>
                   <p class="text-justify lead mb-0">
-                  The platform allows a range of services to be published. From emergency items to consultation services. It helps identify third party providers who can respond faster. 
+                  The platform allows a range of services to be published. From emergency items, logistics to consultation services. It helps identify third party providers who can respond in an open way by having access to requesters.  
                   </p>           
               </div>
             </div>
