--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="http://34.70.122.120" target="_blank">Command Center
+            <a class="nav-link" href="https://34.70.122.120" target="_blank">Command Center
               <span class="sr-only">(current)</span> 
             </a>
           </li>
@@ -68,7 +68,7 @@
 
 
       <div class="row align-items-center text-justify m-auto">
-        <p class="lead mt-3">Casc-Aid is an operating model supported by a technology platform that enables hyperlocal, rapid response services to citizens. Built by the team behind the Relief Riders, a network of 700 volunteers across 9 cities delivering essentials to people during the pandemic. Its a solution that has delivered essentials to more than 1000 people in just 20 days with an average turnaround time thats quicker than a commercial delivery partner. The platform enables request logging, tracking responses, back office operations and collaboration with other orgs using the <a href="cacc.html" target="_blank">map dashboard</a>. <br><br>
+        <p class="lead mt-3">Casc-Aid is an operating model supported by a technology platform that enables hyperlocal, rapid response, logistics to citizens. Built by the team behind the Relief Riders, a network of 700 volunteers across 9 cities delivering essentials to people during the pandemic. Its a solution that has delivered essentials to more than 1000 people in just 20 days with an average turnaround time thats quicker than a commercial delivery partner. The platform enables request logging, tracking responses, back office operations and collaboration with other orgs using the <a href="cacc.html" target="_blank">map dashboard</a>. <br><br>
 
         If you are an organisation delivering emergency response or accelerating SDG goals, join the partners we already have on board to collaborate and increase your reach. We can help you setup the command center and get you going in 30 mins.</p>
       </div>
@@ -105,9 +105,9 @@
                 <div class="features-icons-icon d-flex">
                   <i class="icon-phone m-auto text-primary"></i>
                 </div>
-                <h3>Services</h3>
+                <h3>Logistics</h3>
                   <p class="text-justify lead mb-0">
-                  The platform allows a range of services to be published. From emergency items, logistics to consultation services. It helps identify third party providers who can respond in an open way by having access to requesters.  
+                  The platform allows a range of services to be published. From emergency items, transportation to consultation services. It helps identify third party providers who can respond in an open way by having access to requesters.  
                   </p>           
               </div>
             </div>
@@ -170,7 +170,7 @@
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
-              <a href="http://34.70.122.120" target="_blank">Command Center</a>
+              <a href="https://34.70.122.120" target="_blank">Command Center</a>
             </li>
           </ul>
           <p class="text-muted small mb-4 mb-lg-0">&copy; Urban Morph 2021. All Rights Reserved.</p>
