--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="row">
         <div class="col-xl-9 mx-auto">
           <h1 class="mb-3">CASC-AID</h1>
-           <h3 class="mb-5">Hyperlocal, Rapid Response, Services</h3>
+           <h3 class="mb-5">Hyperlocal, Rapid Response, Logistics</h3>
         </div>
            <p class="bottomright">
             Photo by <a href="https://unsplash.com/@noshadtakes?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Nowshad Arefin</a> on <a href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
