--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="col-lg-4">
               <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                 <div class="features-icons-icon d-flex">
-                  <i class="icon-phone m-auto text-primary"></i>
+                  <i class="icon-directions m-auto text-primary"></i>
                 </div>
                 <h3>Logistics</h3>
                   <p class="text-justify lead mb-0">
