--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="https://34.70.122.120" target="_blank">Command Center
+            <a class="nav-link" href="https://cacc.urbanmorph.com/" target="_blank">Command Center
               <span class="sr-only">(current)</span> 
             </a>
           </li>
@@ -170,7 +170,7 @@
             </li>
             <li class="list-inline-item">&sdot;</li>
             <li class="list-inline-item">
-              <a href="https://34.70.122.120" target="_blank">Command Center</a>
+              <a href="https://cacc.urbanmorph.com/" target="_blank">Command Center</a>
             </li>
           </ul>
           <p class="text-muted small mb-4 mb-lg-0">&copy; Urban Morph 2021. All Rights Reserved.</p>
