--- a/index.html
+++ b/index.html
@@ -202,6 +202,17 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+  <script src="https://cacc.urbanmorph.com/assets/chat/chat.min.js"></script>
+  <script>
+  $(function() {
+    new ZammadChat({
+      background: '#191922',
+      fontSize: '12px',
+      chatId: 1
+    });
+  });
+  </script>
 
 </body>
 
