--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
         If you are an organisation delivering emergency response or accelerating SDG goals, join the partners we already have on board to collaborate and increase your reach. We can help you setup the command center and get you going in 30 mins.</p>
       </div>
+      <div class="text-center my-3"><button id="feedback-form">How do you want to be helped today?</button></div> 
 
     <!-- /.row -->
  
@@ -204,6 +205,22 @@
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
   <script src="https://cacc.urbanmorph.com/assets/chat/chat.min.js"></script>
+
+
+<script id="zammad_form_script" src="https://cacc.urbanmorph.com/assets/form/form.js"></script>
+
+<script>
+$(function() {
+  $('#feedback-form').ZammadForm({
+    messageTitle: 'Shout out your request',
+    messageSubmit: 'Submit',
+    messageThankYou: 'Thank you for your inquiry (#%s)! We\'ll contact you as soon as possible.',
+    showTitle: true,
+    modal: true
+  });
+});
+</script>
+
   <script>
   $(function() {
     new ZammadChat({
