--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
         If you are an organisation delivering emergency response or accelerating SDG goals, join the partners we already have on board to collaborate and increase your reach. We can help you setup the command center and get you going in 30 mins.</p>
       </div>
-      <div class="text-center my-3"><button id="feedback-form">How do you want to be helped today?</button></div> 
+
 
     <!-- /.row -->
  
@@ -150,7 +150,7 @@
       <!--Grid column-->
     </div>
     <!--row-->
-
+  <div class="text-center my-5"><button id="feedback-form">&nbsp;Send us a message&nbsp;</button></div> 
   </div>
   <!-- /.container -->
 
