--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
 
     <div class="my-5 text-center">
         <h1 class="text-uppercase">Partners</h1>
+        <div>
+            Use the chat <span class="fa fa-comment-alt" style=" vertical-align: middle;"></span> at the bottom of this site or write to <span class="badge badge-pill badge-dark">@Casc Aid</span> bot on Telegram <span class="fab fa-telegram" style=" vertical-align: middle;"></span> to reach the partners.
+        </div>
     </div>
   <div class="row">
       <!--Grid column-->
@@ -135,16 +138,16 @@
         <figure class="figure">
           <img src="img/bioman.png"
             class="figure-img img-fluid z-depth-1 contain-long" alt="...">
-          <figcaption class="figure-caption text-justify mt-2"><a href="bioman.tech" target="_blank">Bioman</a> uses this platform to assign own or thrid party waste management pick up services based on demand. </figcaption>
+          <figcaption class="figure-caption text-justify mt-2"><a href="bioman.tech" target="_blank">Bioman</a> uses this platform to assign own or thrid party waste management services based on demand. </figcaption>
         </figure>
       </div>
       <!--Grid column-->
 
       <div class="col-md-4 mb-5 text-center">
         <figure class="figure">
-          <img src="img/catalyst2030.jpeg"
+          <img src="img/dakshas-logo.jpeg"
             class="figure-img img-fluid z-depth-1 contain-long" alt="...">
-          <figcaption class="figure-caption text-justify mt-2">Select partners of <a href="http://www.catalyst2030nase.org" target="_blank">Catalyst 2030 NASE</a> are piloting this platform to deliver COVID relief services to remote villages across the country</figcaption>
+          <figcaption class="figure-caption text-justify mt-2"><a href="http://www.dakshas.org" target="_blank">Dakshas</a> is piloting this platform with select partners to deliver COVID relief services to remote villages across the country</figcaption>
         </figure>
       </div>
       <!--Grid column-->
