partners & map update

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             Use the chat <span class="fa fa-comment-alt" style=" vertical-align: middle;"></span> at the bottom of this site or write to <span class="badge badge-pill badge-dark">@Casc Aid</span> bot on Telegram <span class="fab fa-telegram" style=" vertical-align: middle;"></span> to reach the partners.
         </div>
     </div>
-  <div class="row">
+  <div class="row justify-content-center">
       <!--Grid column-->
       
       <div class="col-md-4 mb-5 text-center">
@@ -130,15 +130,6 @@
           <img src="img/RR_Logo_Circle-03.png"
             class="figure-img img-fluid z-depth-1 contain" alt="...">
           <figcaption class="figure-caption text-justify mt-2"><a href="reliefriders.urbanmorph.com" target="_blank">Relief Riders</a> use the platform to deliver essentials to the elderly and vulnerable during the COVID pandemic across 9 cities with 700 volunteers</figcaption>
-        </figure>
-      </div>
-      <!--Grid column-->
-
-      <div class="col-md-4 mb-5 text-center">
-        <figure class="figure">
-          <img src="img/bioman.png"
-            class="figure-img img-fluid z-depth-1 contain-long" alt="...">
-          <figcaption class="figure-caption text-justify mt-2"><a href="bioman.tech" target="_blank">Bioman</a> uses this platform to assign own or thrid party waste management services based on demand. </figcaption>
         </figure>
       </div>
       <!--Grid column-->
