--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <div class="row align-items-center text-justify m-auto">
         <p class="lead mt-3">Casc-Aid is an operating model supported by a technology platform that enables hyperlocal, rapid response, logistics to citizens. Built by the team behind the Relief Riders, a network of 700 volunteers across 9 cities delivering essentials to people during the pandemic. Its a solution that has delivered essentials to more than 1000 people in just 20 days with an average turnaround time thats quicker than a commercial delivery partner. The platform enables request logging, tracking responses, back office operations and collaboration with other orgs using the <a href="cacc.html" target="_blank">map dashboard</a>. <br><br>
 
-        If you are an organisation delivering emergency response or accelerating SDG goals, join the partners we already have on board to collaborate and increase your reach. We can help you setup the command center and get you going in 30 mins.</p>
+        If you are an organisation delivering emergency response or accelerating sustainable development goals, join the partners we already have on board to collaborate and increase your reach. We can help you setup the command center and get you going in 30 mins.</p>
       </div>
 
 
